*) Implemented java.endorsed.dir suggestion. *) Implemented clean shutdown solution using Chad's code and wget. *) Fixed some bad behaviour in startup scripts.